# ort-builder

./: .gitignore  CMakeLists.txt  README.md  build-android.sh  build-ios-simulator.sh  build-ios.sh  build-linux.sh  build-mac.sh  build-wasm.sh  build-win.bat  clean-mac.sh  convert-model-to-ort.sh  requirements.txt
CMake/: ArchiveCombiner.cmake
